--- a/style.css
+++ b/style.css
@@ -87,3 +87,8 @@ margin: 20px;
     .futuro p b{
     font-size: 15px;
     }
+.imagem{
+    width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
